--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@openzeppelin/contracts": "^4.3.2",
     "@truffle/hdwallet-provider": "^1.5.0",
     "dotenv": "^10.0.0",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.5.2"
   },
   "devDependencies": {
     "truffle-plugin-verify": "^0.5.15"
